<resources>
    <string name="app_name">BranchApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_select">Select currencies</string>
    <string name="action_select_all">Select ALL currencies</string>
    <string name="action_unselect_all">Unselect ALL currencies</string>
    <string name="URL">https://api.bitcoinaverage.com/ticker/global/</string>
    <string name="ALL_URL">https://api.bitcoinaverage.com/ticker/global/all</string>
    <string name="Greeting">BitCoin Asking Price</string>
    <string name="Greeting2">Select Currency</string>
    <string name="select">Available currencies:</string>
    <string name="ask">ask</string>
    <string name="timestamp">timestamp</string>
    <string name="Name">Currency name</string>
    <string name="Ask">Ask price</string>
    <string name="Time">Timestamp</string>
    <string name="spacer">" - "</string>
    <string name="exit">Exit application</string>
    <string name="save">Save and exit</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Currency</string>

    <string-array name="long_currencies">
        <item>USD (US Dollars)</item>
        <item>KES (Kenyan Shillings)</item>
        <item>TZS (Tanzanian Shillings)</item>
        <item>UGX (Ugandan Shillings)</item>
    </string-array>

    <string-array name="selected_currencies">
        <item>USD</item>
        <item>KES</item>
        <item>TZS</item>
        <item>UGX</item>
    </string-array>

</resources>
