<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.apps.stark.branchapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Greeting"
        android:textSize="30sp"
        android:paddingBottom="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list"
        android:text="@string/select"
        android:layout_below="@+id/greeting"
        android:textSize="30sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        android:textStyle="bold"
        />

    <Spinner
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currency_spinner"
        android:layout_below="@+id/list"
        android:paddingBottom="40sp"
        android:entries="@array/long_currencies"
         />

    <TextView
        android:id="@+id/currency_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="10sp"
        android:layout_below="@+id/currency_spinner"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/ask_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ask"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="10sp"
        android:layout_below="@+id/currency_name"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/time_stamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Time"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingBottom="10sp"
        android:layout_below="@+id/ask_price"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
